--- a/Exercice5/index.html
+++ b/Exercice5/index.html
@@ -1,22 +1,103 @@
 <!DOCTYPE html>
 <html lang="fr" dir="ltr">
-  <head>
-    <meta charset="utf-8" />
-    <title>Exercice 5</title>
-  </head>
-  <body>
-    <p id="text">
-      Python est un langage de programmation interprété, multi-paradigme et multiplateformes. Il favorise la programmation impérative structurée, fonctionnelle et orientée objet. Il est doté d'un typage dynamique fort, d'une gestion automatique de la mémoire par ramasse-miettes et d'un système de gestion d'exceptions ; il est ainsi similaire à Perl, Ruby, Scheme, Smalltalk et Tcl. Le langage Python est placé sous une licence libre proche de la licence BSD et fonctionne sur la plupart des plates-formes informatiques, des smartphones aux ordinateurs centraux, de Windows à Unix avec notamment GNU/Linux en passant par macOS, ou encore Android, iOS, et peut aussi être traduit en Java ou .NET. Il est conçu pour optimiser la productivité des programmeurs en offrant des outils de haut niveau et une syntaxe simple à utiliser.
-      Il est également apprécié par certains pédagogues qui y trouvent un langage où la syntaxe, clairement séparée des mécanismes de bas niveau, permet une initiation aisée aux concepts de base de la programmation.
-    </p>
-    <button type="button" id="pink" onclick="idText.style.color='pink'; idText.style.fontWeight='normal'; idText.style.fontStyle='normal'">Rose</button>
-    <button type="button" id="blue" onclick="idText.style.color='blue'; idText.style.fontWeight='normal'; idText.style.fontStyle='normal'">Bleu</button>
-    <button type="button" id="purple" onclick="idText.style.color='purple'; idText.style.fontWeight='normal'; idText.style.fontStyle='normal'">Violet</button>
-    <button type="button" id="bold" onclick="idText.style.fontWeight='bold'; idText.style.color='black'; idText.style.fontStyle='normal'">Gras</button>
-    <button type="button" id="ital" onclick="idText.style.fontStyle='italic'; idText.style.color='black'; idText.style.fontWeight='normal';">Italique</button>
 
-    <script>
+<head>
+  <meta charset="utf-8" />
+  <title>Exercice 5</title>
+</head>
+
+<body>
+  <p id="text">
+    Python est un langage de programmation interprété, multi-paradigme et multiplateformes. Il favorise la programmation
+    impérative structurée, fonctionnelle et orientée objet. Il est doté d'un typage dynamique fort, d'une gestion
+    automatique de la mémoire par ramasse-miettes et d'un système de gestion d'exceptions ; il est ainsi similaire à
+    Perl, Ruby, Scheme, Smalltalk et Tcl. Le langage Python est placé sous une licence libre proche de la licence BSD et
+    fonctionne sur la plupart des plates-formes informatiques, des smartphones aux ordinateurs centraux, de Windows à
+    Unix avec notamment GNU/Linux en passant par macOS, ou encore Android, iOS, et peut aussi être traduit en Java ou
+    .NET. Il est conçu pour optimiser la productivité des programmeurs en offrant des outils de haut niveau et une
+    syntaxe simple à utiliser.
+    Il est également apprécié par certains pédagogues qui y trouvent un langage où la syntaxe, clairement séparée des
+    mécanismes de bas niveau, permet une initiation aisée aux concepts de base de la programmation.
+  </p>
+  <button type="button" id="pink">Rose</button>
+  <button type="button" id="blue">Bleu</button>
+  <button type="button" id="purple">Violet</button>
+  <button type="button" id="bold">Gras</button>
+  <button type="button" id="ital">Italique</button>
+
+  <script>
+    let idText = document.getElementById('text');
+
+    pink.onclick = function () {
+      idText.style = '';
+      idText.style.color = 'pink';
+    }
+
+    blue.onclick = function () {
+      idText.style = '';
+      idText.style.color = 'blue';
+    }
+
+    purple.onclick = function () {
+      idText.style = '';
+      idText.style.color = 'purple';
+    }
+
+    bold.onclick = function () {
+      idText.style = '';
+      idText.style.fontWeight = 'bold';
+    }
+
+    ital.onclick = function () {
+      idText.style = '';
+      idText.style.fontStyle = 'ital'
+    }
+  </script>
+  <!-- <script>
       let idText = document.getElementById('text');
-    </script>
+      let idPink = document.getElementById('pink');
+      let idBlue = document.getElementById('blue');
+      let idPurple = document.getElementById('purple');
+      let idBold = document.getElementById('bold');
+      let idItal = document.getElementById('ital');
+
+      idPink.addEventListener('click', changeStylePink);
+      idBlue.addEventListener('click', changeStyleBlue);
+      idPurple.addEventListener('click', changeStylePurple);
+      idBold.addEventListener('click', changeStyleBold);
+      idItal.addEventListener('click', changeStyleItal);
+
+      function changeStylePink () {
+          idText.style.color='pink';
+          idText.style.fontWeight='normal'; 
+          idText.style.fontStyle='normal'
+      }
+
+      function changeStyleBlue () {
+          idText.style.color='blue';
+          idText.style.fontWeight='normal'; 
+          idText.style.fontStyle='normal'
+      }
+
+      function changeStylePurple () {
+          idText.style.color='purple';
+          idText.style.fontWeight='normal'; 
+          idText.style.fontStyle='normal'
+      }
+
+      function changeStyleBold () {
+          idText.style.color='black';
+          idText.style.fontWeight='bold'; 
+          idText.style.fontStyle='normal'
+      }
+
+      function changeStyleItal () {
+          idText.style.color='black';
+          idText.style.fontWeight='normal'; 
+          idText.style.fontStyle='ital'
+      }
+
+    </script> -->
 </body>
+
 </html>
