--- a/Exercice8/index.html
+++ b/Exercice8/index.html
@@ -4,23 +4,26 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous" />
-    <title>Exercice 6</title>
+    <title>Exercice 8</title>
 </head>
 <body>
     <div class="content text-center">
-        <h1>Exercice 6</h1>
+        <h1>Exercice 8</h1>
         <p>Créer un formulaire avec un champ prénom et un champ âge. Ajouter un bouton +. Au clic sur ce bouton, cloner les champs créés.</p>
         <form action="">
-            <div class="form-group row justify-content-center" id="formName">
-                <label for="name" class="col-sm-2 col-form-label">Prénom</label>
-                <div class="col-sm-5">
-                    <input type="text" class="form-control">
+            <div id="dupli">
+                <div class="col-sm form-group row justify-content-center">
+                    <label for="name" class="col-sm-2 col-form-label">Prénom</label>
+                    <div class="col-sm-5">
+                        <input type="text" class="form-control">
+                    </div>
                 </div>
-            </div>
-            <div class="form-group row justify-content-center" id="formAge">
-                <label for="age" class="col-sm-2 col-form-label">Age</label>
-                <div class="col-sm-5">
-                    <input type="text" class="form-control">
+            
+                <div class="col-sm form-group row justify-content-center" id="formAge">
+                    <label for="age" class="col-sm-2 col-form-label">Age</label>
+                    <div class="col-sm-5">
+                        <input type="text" class="form-control">
+                    </div>
                 </div>
             </div>
             <button type="button" class="btn btn-primary" onclick="buttonDuplication()">+</button>
@@ -28,12 +31,11 @@
     </div>
     
     <script>
-        let dupliFormName = document.getElementById("formName");
-        console.log(dupliFormName)
+        let idForm = document.getElementById("dupli");
+        let duplicateForm = idForm.cloneNode(true);
 
         function buttonDuplication() {
-            let cln = dupliFormName.cloneNode(true)
-            dupliFormName.appendChild(cln);
+            idForm.appendChild(duplicateForm);
         }
 
     </script>
