--- a/Exercice8/index.html
+++ b/Exercice8/index.html
@@ -11,7 +11,7 @@
         <h1>Exercice 8</h1>
         <p>Créer un formulaire avec un champ prénom et un champ âge. Ajouter un bouton +. Au clic sur ce bouton, cloner les champs créés.</p>
         <form action="">
-            <div id="dupli">
+            <div>
                 <div class="col-sm form-group row justify-content-center">
                     <label for="name" class="col-sm-2 col-form-label">Prénom</label>
                     <div class="col-sm-5">
@@ -26,16 +26,17 @@
                     </div>
                 </div>
             </div>
-            <button type="button" class="btn btn-primary" onclick="buttonDuplication()">+</button>
+            <button type="button" class="btn btn-primary mb-3" onclick="buttonDuplication()">+</button>
         </form>
     </div>
     
     <script>
-        let idForm = document.getElementById("dupli");
-        let duplicateForm = idForm.cloneNode(true);
 
         function buttonDuplication() {
-            idForm.appendChild(duplicateForm);
+            let elmDiv = document.getElementsByTagName('div');
+            let elmForm = document.getElementsByTagName('form');
+            let clnForm = elmDiv[1].cloneNode(true);
+            elmForm[0].appendChild(clnForm);
         }
 
     </script>
